# eadss

./: .env.example  .gitignore  docker-compose.yml  docs_AWS_DEPLOY.md
backend/: Dockerfile  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0287e0a76b40_add_usage_events.py  2b2a39af36dc_add_inference_output_fields.py  2d4ddde960fd_add_usage_events.py  610e343d1609_admin_users_and_memberships.py  6c884d5b8ae8_add_alert_rules_and_evidence.py  94e08d346919_add_admin_users.py  9f1b3c7a2d10_add_admin_auth_tables.py  a1c4d2e9b6f1_add_super_admin_flag.py  b2a1ca07f188_make_inference_runs_started_at_nullable.py  b32eb3b5e1ce_add_topics_tables.py  c15daebc3c09_init_tables.py  cb5b28b5b969_orgs_and_usage_events.py  e4ce2024e449_add_aggregation_tables.py  f16783cd0548_add_organizations.py  f2caf5178516_add_inference_runs_created_at.py  fbfb31a12353_add_api_keys.py  fc460caa15a2_make_inference_runs_started_at_nullable.py  fcc54c501383_add_document_ingestion_fields.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: admin_auth.py  celery_app.py  config.py  pii.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  admin_membership.py  admin_user.py  aggregations.py  alerts.py  api_key.py  audit_log.py  document.py  document_topic.py  org.py  (+3 more)
backend/app/schemas/: admin_auth.py  alerts.py  document.py  ingestion.py  orgs.py  tickets.py
backend/app/tasks/: __init__.py  aggregations.py  alerting.py  infer_docs.py  topic_jobs.py
backend/app/utils/: explain.py  synthetic_data.py
(+33 files in other folders)
